[gd_scene format=3 uid="uid://bu50cxbq1npk2"]

[ext_resource type="Texture2D" uid="uid://b2ef306flugea" path="res://icon.svg" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dyfueilbuyeq6" path="res://scenes/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://cmibx6d6cuwns" path="res://sprites/wewewewe.jpg" id="3_qhqgy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(128, 127)

[node name="Player" type="CharacterBody2D" unique_id=354997750]
position = Vector2(217, 157)
collision_layer = 5
script = ExtResource("1_g2els")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1793928020]
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=190662540]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_g2els")

[node name="Flashlight" type="Node2D" parent="." unique_id=829503757]

[node name="PointLight2D" type="PointLight2D" parent="Flashlight" unique_id=206395832]
position = Vector2(5.000004, 2.0000153)
scale = Vector2(1.4034646, 1.2544947)
energy = 0.8
texture = ExtResource("3_qhqgy")
offset = Vector2(-1.42, 156.672)
height = 115.0

[node name="LightArea" type="Area2D" parent="Flashlight/PointLight2D" unique_id=1659844400]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Flashlight/PointLight2D/LightArea" unique_id=1764080120]
position = Vector2(-1.4250565, -7.6293945e-06)
polygon = PackedVector2Array(0.71250916, 0, -91.20285, 188.92068, 98.328094, 188.92068)

[node name="Camera2D" type="Camera2D" parent="." unique_id=647797553]

[connection signal="body_entered" from="Flashlight/PointLight2D/LightArea" to="." method="_on_light_area_body_entered"]
[connection signal="body_exited" from="Flashlight/PointLight2D/LightArea" to="." method="_on_light_area_body_exited"]
